# argo-demo

./: Readme.md  app.py  deploy_workflow.yaml  pyproject.toml  test.yaml
argo_demo/: controller.py
tests/: test_argo.py
workflow_templates/: delete_nebula.yaml  deploy_nebula.yaml  run_tck.yaml
workflow_templates/tests/: tck.yaml
