[tool.poetry]
name = "argo-demo"
version = "0.1.0"
description = ""
authors = ["HarrisChu <1726587+HarrisChu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
